// Automotive Marketplace API — schema source for https://dbdiagram.io
//
// Paste this file into dbdiagram.io, or run:
//   npx @dbml/cli dbml2sql docs/schema.dbml --postgres
// It mirrors src/shared/database/migrations/*.sql; the migrations are the
// source of truth and this file is the diagram rendering of them.

Project automotive_marketplace {
  database_type: 'PostgreSQL'
  Note: '''
  # Automotive Marketplace

  Listings, a hierarchical category tree, and dynamic filter attributes.
  No ORM: the application issues raw parameterised SQL.
  '''
}

Table listings {
  id            bigint [pk, increment, note: 'GENERATED ALWAYS AS IDENTITY']
  make          text [not null]
  model         text [not null]
  year          integer [not null, note: 'CHECK 1900..2100']
  mileage       integer [not null, note: 'CHECK >= 0']
  price         bigint [not null, note: 'CHECK >= 0; IDR']
  condition     text [not null, note: 'CHECK new | used | certified']
  transmission  text [not null, note: 'CHECK manual | automatic | cvt']
  fuel_type     text [not null, note: 'CHECK petrol | diesel | electric | hybrid']
  color         text [not null]
  images        text[] [not null, default: '{}']
  location      text [not null]
  status        text [not null, default: 'available', note: 'CHECK available | pending | sold | removed']
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]
  category_id   bigint [note: 'Nullable: uncategorised listings are allowed']
  search_vector tsvector [note: 'STORED GENERATED over make/model/location/color, weighted A/A/B/C, config simple']

  indexes {
    (status, created_at, id) [name: 'listings_status_created_at_id_idx', note: 'Explicit status= filters, created_at sort']
    (status, price, id) [name: 'listings_status_price_id_idx']
    (status, year, id) [name: 'listings_status_year_id_idx']
    (status, mileage, id) [name: 'listings_status_mileage_id_idx']
    (created_at, id) [name: 'listings_active_created_at_id_idx', note: 'PARTIAL WHERE status <> removed — the default browse predicate']
    (price, id) [name: 'listings_active_price_id_idx', note: 'PARTIAL WHERE status <> removed']
    (year, id) [name: 'listings_active_year_id_idx', note: 'PARTIAL WHERE status <> removed']
    (mileage, id) [name: 'listings_active_mileage_id_idx', note: 'PARTIAL WHERE status <> removed']
    (category_id, created_at, id) [name: 'listings_category_created_at_id_idx', note: 'PARTIAL WHERE status <> removed — category subtree browse']
    (category_id, price, id) [name: 'listings_category_price_id_idx', note: 'PARTIAL WHERE status <> removed']
    (`lower(make)`) [name: 'listings_make_lower_idx', note: 'Case-insensitive equality filter']
    (`lower(model)`) [name: 'listings_model_lower_idx']
    (`lower(location)`) [name: 'listings_location_lower_idx']
    (make) [name: 'listings_make_trgm_idx', type: gin, note: 'gin_trgm_ops — autocomplete ILIKE prefix']
    (model) [name: 'listings_model_trgm_idx', type: gin, note: 'gin_trgm_ops']
    (location) [name: 'listings_location_trgm_idx', type: gin, note: 'gin_trgm_ops']
    (search_vector) [name: 'listings_search_vector_idx', type: gin, note: 'Full-text @@ and ts_rank']
  }

  Note: '''
  fuel_type, condition, and transmission are deliberately NOT indexed:
  3-4 distinct values still match a fifth of the table, so the planner prefers
  the sort index with a filter. Dropped in migration 0002.
  '''
}

Table categories {
  id         bigint [pk, increment]
  parent_id  bigint [note: 'NULL for a root; CHECK (parent_id IS NULL) = (depth = 1)']
  name       text [not null, note: 'CHECK btrim(name) <> empty']
  slug       text [not null, note: 'CHECK btrim(slug) <> empty']
  path       ltree [not null, note: 'Materialised path, e.g. cars.suv.5-seater']
  depth      integer [not null, note: 'CHECK nlevel(path) = depth AND depth >= 1']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (parent_id, slug) [unique, name: 'categories_parent_slug_key', note: 'NULLS NOT DISTINCT — siblings differ, the same name may repeat in another branch']
    (path) [name: 'categories_path_gist_idx', type: giST, note: 'Descendant/ancestor lookups: path <@ $1']
    (parent_id) [name: 'categories_parent_id_idx', note: 'Tree assembly walks parent -> child']
  }

  Note: '''
  ltree over a plain text path: the database rejects a malformed path, ancestry
  is one operator, and a subtree move is subpath() rather than string surgery.
  The path always ends with the node slug and is exactly depth long
  (CHECK categories_path_matches_slug), so it cannot disagree with the tree.
  '''
}

Table attributes {
  id         bigint [pk, increment]
  key        text [not null, note: 'CHECK ^[a-z][a-z0-9]*(_[a-z0-9]+)*$']
  label      text [not null]
  type       text [not null, note: 'CHECK enum | range | boolean']
  unit       text
  options    text[] [not null, default: '{}', note: 'Enum choices; must be empty for range/boolean']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (key) [unique, name: 'attributes_key_key', note: 'One definition per key, shared by every category that attaches it']
  }

  Note: '''
  Attributes are rows, not columns: a new business filter is data, not a
  migration. Global rather than owned by one category, so engine_capacity keeps
  one unit/label/options across Cars and Motorcycles.
  '''
}

Table category_attributes {
  id           bigint [pk, increment]
  category_id  bigint [not null]
  attribute_id bigint [not null]
  position     integer [not null, default: 0, note: 'Orders the filter panel']
  created_at   timestamptz [not null, default: `now()`]

  indexes {
    (category_id, attribute_id) [unique, name: 'category_attributes_unique']
    (attribute_id) [name: 'category_attributes_attribute_idx', note: 'Reverse lookup: which categories expose this attribute']
  }
}

Table listing_attribute_values {
  listing_id   bigint [not null]
  attribute_id bigint [not null]
  value_text   text
  value_num    numeric
  value_bool   boolean
  created_at   timestamptz [not null, default: `now()`]
  updated_at   timestamptz [not null, default: `now()`]

  indexes {
    (listing_id, attribute_id) [pk, name: 'listing_attribute_values_pkey']
    (attribute_id, value_text) [name: 'listing_attribute_values_text_idx', note: 'PARTIAL WHERE value_text IS NOT NULL']
    (attribute_id, value_num) [name: 'listing_attribute_values_num_idx', note: 'PARTIAL WHERE value_num IS NOT NULL']
    (attribute_id, value_bool) [name: 'listing_attribute_values_bool_idx', note: 'PARTIAL WHERE value_bool IS NOT NULL']
  }

  Note: '''
  CHECK (num_nonnulls(value_text, value_num, value_bool) = 1): exactly one typed
  column holds the value, so the filter predicate stays index-supported
  (value_num >= $1) and no read has to guess how to cast.
  '''
}

Table schema_migrations {
  name       text [pk]
  applied_at timestamptz [not null, default: `now()`]

  Note: 'Bookkeeping for the forward-only migration runner.'
}

// categories.parent_id -> categories.id : self-referencing tree, ON DELETE RESTRICT
Ref: categories.parent_id > categories.id [delete: restrict]
// listings.category_id -> categories.id : nullable; deleting a used category fails loudly
Ref: listings.category_id > categories.id [delete: restrict]
Ref: category_attributes.category_id > categories.id [delete: cascade]
Ref: category_attributes.attribute_id > attributes.id [delete: cascade]
Ref: listing_attribute_values.listing_id > listings.id [delete: cascade]
Ref: listing_attribute_values.attribute_id > attributes.id [delete: cascade]
